--- a/test.ipynb
+++ b/test.ipynb
@@ -1136,7 +1136,7 @@
     "    meta_obj.meta_distribution_data_all_time_to_csv_gz(dis_data_all_time=meta_obj.get_meta_microsite_environment_values(environment_name='y_axis_environment'), \n",
     "                                                       file_name=goal_path+'/'+'rep=%d-meta_y_axis_phenotype_all_time.csv.gz'%(rep), \n",
     "                                                       index=['y_axis_environment_values'], columns=columns, mode='w')\n",
-    "    for time_step in tqdm(range(all_time_step): \n",
+    "    for time_step in range(all_time_step): \n",
     "        write_in_logger_info = ''\n",
     "        write_in_logger_info += 'time_step=%d \\n'%time_step\n",
     "        #print('time_step=%d'%time_step)\n",
